test to fix on mobile

--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ a {
 }
 
 i {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 a:hover {
@@ -36,7 +36,6 @@ a:hover {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 293.2px;
 }
 
 .background {
